# exas

./: README.md  pyproject.toml
src/exa_cli/: __init__.py  api.py  cli.py  config.py  format.py
tests/: test_payload.py
