[project]
name = "exa-cli"
version = "0.1.0"
description = "A thorough CLI for the Exa /search endpoint"
readme = "README.md"
authors = [
    { name = "John King", email = "jking@almostmachines.dev" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.7",
]

[project.scripts]
exas = "exa_cli.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
